<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <com.cesards.cropimageview.CropImageView
            android:layout_width="match_parent"
            custom:crop="centerBottom"
            android:src="@drawable/bg"
            android:layout_height="match_parent" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/mainPanel"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:minHeight="0dp"
                    android:layout_marginRight="15dp"
                    android:minWidth="0dp"
                    android:textColor="@color/white"
                    android:text="@string/back_btn"
                    fontPath="fonts/Cabin/fontawesome-webfont.ttf"
                    tools:ignore="MissingPrefix"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/register"
                    android:textSize="22sp"
                    fontPath="fonts/Cabin/Cabin-Bold-TTF.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="30dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    >


                    <LinearLayout
                        android:id="@+id/nameWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:textColorHint="@color/black"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/full_name"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:nextFocusDown="@id/gender"
                            android:hint="@string/full_name_hint"
                            android:textColorHint="@color/black"
                            android:inputType="textEmailAddress"
                            android:backgroundTint="@color/black"
                            android:id="@+id/fullname"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/genderWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/gender"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="@string/male_of_female_obviously"
                            android:textColorHint="@color/black"
                            android:inputType="text"
                            android:nextFocusDown="@id/phone"
                            android:backgroundTint="@color/black"
                            android:id="@+id/gender"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/phoneWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"

                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/phone_number"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="That thing you call and it rings"
                            android:textColorHint="@color/black"
                            android:inputType="text"
                            android:nextFocusDown="@id/email"
                            android:backgroundTint="@color/black"
                            android:id="@+id/phone"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/emailWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/email_address"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="@string/where_we_are_sending_your_iv_no_spams"
                            android:textColorHint="@color/black"
                            android:nextFocusDown="@id/hear"
                            android:inputType="textEmailAddress"
                            android:backgroundTint="@color/black"
                            android:id="@+id/email"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hearWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/hear_from"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="@string/tell_us_we_love_a_good_gist"
                            android:textColorHint="@color/black"
                            android:inputType="text"
                            android:nextFocusDown="@id/career"
                            android:backgroundTint="@color/black"
                            android:id="@+id/hear"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/careerWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/career"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="@string/student_graduate_engineer_batman"
                            android:textColorHint="@color/black"

                            android:inputType="text"
                            android:backgroundTint="@color/black"
                            android:id="@+id/career"
                            android:nextFocusDown="@id/first"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/firstWrapper"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_marginBottom="3dp"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/white"
                            android:text="@string/first_time"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:paddingBottom="15dp"
                            android:hint="@string/always_a_first_time_for_everything"
                            android:textColorHint="@color/black"
                            android:inputType="text"
                            android:backgroundTint="@color/black"
                            android:id="@+id/first"
                            android:layout_height="wrap_content" />

                    </LinearLayout>




                    <Button
                        android:id="@+id/registerbtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Register"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/green_bg"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


</layout>



